fixed To label style/alignment

--- a/moments_mobile/www/css/composition_view.css
+++ b/moments_mobile/www/css/composition_view.css
@@ -95,15 +95,22 @@
 
 #new_moment_container .to_wrapper label {
     color: gray;
-    position: absolute;
-    left: 0;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 14px;
+    padding-right: 5px;
 }
 
 #new_moment_container input[name="to"] {
+    display: inline-block;
     border: none;
     outline: none;
-    padding-left: 30px;
-    width: 100%;
+    padding: 0.5px 0 0 30px;
+    margin-left: -30px;
+    background-color: transparent;
+    line-height: 16px;
+    box-sizing: border-box;
 }
 
 #new_moment_container .caption_wrapper {
